tests/positive/PackageLoader/PackageJuvixUsesLockfile/Package.juvix
module Package;

import Stdlib.Prelude open;
import PackageDescription open;

package : Package :=
  defaultPackage
     {name := "abc";
      version := mkVersion 0 0 0 ;
      dependencies := [git "name" "url" "ref1"]};
