tests/negative/PackageNameConflict/dep2/Package.juvix
module Package;

import PackageDescription.V2 open;

package : Package :=
  defaultPackage@{
    name := "dep";
    version :=
      mkVersion@{
        major := 0;
        minor := 11;
        patch := 0;
        release := just "rc.5";
      };
    dependencies := [];
  };
